<resources>
    <string name="app_name">JunaCoffee</string>
    <string name="title_activity_datos_de_sesion">Iniciar Sesión</string>

    <string name="prompt_rut">Rut</string>
    <string name="prompt_password">Pin</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Entrar</string>
    <string name="logo_description">Logo de la aplicacion</string>
    <string name="cb_rememberMe">Recuerdame</string>
    <string name="logMe">Mantenerme Conectado</string>

    <string name="exampleName">Jhonny Melavo Láspatas</string>
    <string name="default_college">U.T.F. SANTA MARIA</string>
    <string name="cardStatus">"Tarjeta %1$s"</string>

    <string name="currentBalance">Saldo Actual</string>
    <string name="_exampleBalance">$32650</string>
    <string name="balanceFormat">$%1$d</string>
    <string name="button_latestTransactions">Ver Ultimas Transacciones</string>
    <string name="about_page">Acerca de…</string>
    <string name="about_page_text">Hecho 98% a base de dulces y cafeína ;)\n Creada por: Oliver Hattshire\n \n No me hago responsable del mal uso de esta aplicación.\n La seguridad aplicada por Sodexo es bastante mala, por lo que si tu teléfono es seguro, tu cuenta lo estará aun más.</string>
    <string name="example_cardStatus">Tarjeta Activa</string>
    <string name="balanceNull">$-</string>
    <string name="lastBalance">Último saldo registrado:</string>
    <string name="banner_ad_unit_id">ca-app-pub-9206593998355776/4199340643</string>
</resources>
