<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    tools:context="moe.laughingcross.jummymony.DatosDeSesion"
    android:orientation="vertical">


        <TextView
            android:id="@+id/mensajeError"
            android:layout_below="@+id/botonIniciarSesion"
            android:gravity="center"
            android:textColor="#ff0040"
            android:textSize="30sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:visibility="gone"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="210dp"
        app:srcCompat="@drawable/h_coffee_cup"
        android:id="@+id/LogoImage"
        android:paddingTop="10dp"
        android:contentDescription="@string/logo_description"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:id="@+id/rut"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:hint="@string/prompt_rut"
        android:maxLines="1"
        android:maxLength="9"
        android:digits="1234567890k"
        android:layout_below="@+id/LogoImage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:nextFocusDown="@+id/Pin"/>
    <EditText
        android:id="@+id/Pin"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:inputType="numberPassword"
        android:maxLines="1"
        android:hint="@string/prompt_password"
        android:digits="1234567890"
        android:maxLength="4"
        android:layout_below="@+id/rut"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:nextFocusDown="@+id/botonIniciarSesion"
        />

    <Button
        android:id="@+id/botonIniciarSesion"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/action_sign_in"
        android:layout_below="@+id/Pin"
        android:onClick="Autenticar"
        android:enabled="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:orientation="vertical"
        android:padding="0dp"
        />
    <ProgressBar
        android:id="@+id/loadingObject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_below="@+id/rut"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        />
    <LinearLayout
        android:layout_below="@+id/botonIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <CheckBox
        android:id="@+id/cb_rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/cb_rememberMe"/>
    <CheckBox
        android:id="@+id/cb_logMe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/logMe"
        android:checked="true"/>
    </LinearLayout>
</RelativeLayout>
</ScrollView>